<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="max" translatable="false">max</string>
    <string name="min" translatable="false">min</string>
    <string name="shopping_list">Shopping list</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_shopping_list">Clear shopping list</string>
    <string name="clear_shopping_list_confirmation">Are you sure you want to clear your shopping list?</string>
    <string name="clear_note_list_confirmation">Are you sure you want to delete all notes?</string>
    <string name="delete_note_confirmation">Are you sure you want to delete this note?</string>
    <string name="delete_menstruation_period_confirmation">Are you sure you want to delete this menstruation?</string>
    <string name="clear_to_do_list_confirmation">Are you sure you want to clear to-do list?</string>
    <string name="clear_post_addresses_confirmation">Are you sure you want to delete all post addresses?</string>
    <string name="delete_post_address_confirmation">Are you sure you want to delete this address?</string>
    <string name="clear_memorable_dates_confirmation">Are you sure you want to delete all dates?</string>
    <string name="delete_memorable_date_confirmation">Are you sure you want to delete this date?</string>
    <string name="clear_menstruation_period_list_confirmation">Are you sure you want to clear menstruation list?</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="what_do_you_want_to_buy">What to buy?</string>
    <string name="enter_ful_name_your_location">Enter the name of your location:</string>
    <string name="saint_petersburg">St. Petersburg</string>
    <string name="moscow">Moscow</string>
    <string name="for_example_st_petersburg">For example, St. Petersburg</string>
    <string name="for_example_novosibirsk">For example, Novosibirsk</string>
    <string name="location_not_selected">Location not selected</string>
    <string name="feels_like">Feels like</string>
    <string name="meters_per_second">m/s</string>
    <string name="failed_to_update_weather_data">Failed to update weather data</string>
    <string name="search_location_error">Search location error</string>
    <string name="saving_location_error">Saving location error</string>
    <string name="failed_to_save">Failed to save. Try again later</string>
    <string name="failed_to_clear_list">Failed to clear the list. Try again later</string>
    <string name="error">Error</string>
    <string name="deleting_item_error">Deleting item error</string>
    <string name="failed_to_get_forecast">Failed to get weather forecast</string>
    <string name="add_note">Add note</string>
    <string name="write_a_note">Write a note</string>
    <string name="post_addresses">Postal addresses</string>
    <string name="addressee_name">Addressee name</string>
    <string name="street">Street</string>
    <string name="building_number">Building number</string>
    <string name="apartment_number">Apartment number</string>
    <string name="postcode">Postcode</string>
    <string name="settlement">Settlement name</string>
    <string name="edge_region_optional">Edge/Region</string>
    <string name="fields_marked_asterisk_required">Fields marked with <b>*</b> are required</string>
    <string name="fill_all_necessary_fields">Fill all necessary fields</string>
    <string name="bld">building</string>
    <string name="apt">apartment</string>
    <string name="error_try_again_later">Error. Try again later</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="crete_to_do_lists_title">Create to-do lists\nso you don\'t forget anything</string>
    <string name="add_postal_addresses_title">Add postal addresses\nand send more letters and postcards!</string>
    <string name="make_shopping_lists_title">Make shopping lists\nso you don\'t forget to buy anything</string>
    <string name="requires_permission_to_access_contacts">Requires permission to access contacts</string>
    <string name="failed_to_get_contact">Failed to get contact</string>
    <string name="notes">Notes</string>
    <string name="no_notes_yet">There are no notes yet</string>
    <string name="what_should_be_done">What should be done?</string>
    <string name="fields_empty_no_contact_will_be_created">All fields are empty, no contact will be created</string>
    <string name="fields_empty_contact_will_be_deleted">All fields are empty, the contact will be deleted</string>
    <string name="data_may_be_out_of_date">Data may be out of date</string>
    <string name="display_section_shopping_list">Display section Shopping list</string>
    <string name="display_section_post_addresses">Display section Post addresses</string>
    <string name="display_section_memorable_dates">Display section Memorable dates</string>
    <string name="display_section_for_women">Display section for women</string>
    <string name="calendar">Calendar</string>
    <string name="main_screen">Main screen</string>
    <string name="clear_notes_in_calendar">Clear calendar notes</string>
    <string name="clear_to_do_lists">Clear to-do lists</string>
    <string name="backup">Backup</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="data_exported_successfully">Data exported successfully</string>
    <string name="data_imported_successfully">Data imported successfully</string>
    <string name="exporting_data_message">Exporting data…\nPlease don\'t close the application</string>
    <string name="all_calendar_notes_will_be_cleared">All notes in the calendar will be cleared</string>
    <string name="all_to_do_lists_will_be_cleared">All to-do lists on the calendar will be cleared</string>
    <string name="text_copied">Text copied</string>
    <string name="memorable_dates">Memorable dates</string>
    <string name="memorable_date">Memorable date</string>
    <string name="add_memorable_dates_title">Add memorable dates so you don\'t\nforget to congratulate anyone</string>
    <string name="today">today</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="what_happened_that_day">What happened that day?</string>
    <string name="year">Year</string>
    <string name="year_is_optional">(year is optional)</string>
    <string name="event">Event</string>
    <string name="note_or_to_do_list">Note or to-do list</string>
    <string name="years_ago">Years ago: %d</string>
    <string name="to_do_list_channel">To-do list channel</string>
    <string name="you_have_scheduled_for_today">You have scheduled for today:</string>
    <string name="channel_to_remind_about_to_do_list">Channel to remind you about the to-do list for the current day</string>
    <string name="section_for_women">Section for women</string>
    <string name="select_time_interval">Select time interval</string>
    <string name="last_menstruation">Last menstruation:</string>
    <string name="menses">Menses</string>
    <string name="duration_of_menstrual_cycle">Duration of menstrual cycle:</string>
    <string name="duration_of_menstruation">Duration of menstruation:</string>
    <string name="n_days">%d days</string>
    <string name="set">Set</string>
    <string name="start_menstruation_must_be_no_later_than_today">Start date of menstruation must be no later than today</string>
    <string name="no_added_menses">No added menses</string>
    <string name="no_added_menses_yet">No added menses yet</string>
    <string name="period_of_menstruation">Period of menstruation</string>
    <string name="next_period_of_menstruation">Next period of menstruation</string>
    <string name="next_menstruation">Next menstruation:</string>
    <string name="no_data">No data</string>
    <string name="delay_of_menstruation">Delay of menstruation: %d days</string>
    <string name="by_creation_date">By creation date</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="important_first">Important first</string>
    <string name="bought_last">Bought last</string>
    <string name="completed_last">Completed last</string>
    <string name="newest_first">Newest first</string>
    <string name="oldest_first">Oldest first</string>
</resources>