<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.lifediary.presentation.ui.location.selection.LocationSelectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ScreenContainer">

        <TextView
            android:id="@+id/searchLocationInputHint"
            style="@style/Text.Hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/enter_ful_name_your_location" />

        <EditText
            android:id="@+id/searchLocationInput"
            style="@style/Input.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchLocationInputHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/searchLocationButton"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:singleLine="true"
            android:maxLength="70"
            android:text="@={viewModel.locationName}"
            android:hint="@string/for_example_novosibirsk" />

        <ImageButton
            android:id="@+id/searchLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="@id/searchLocationInput"
            app:layout_constraintBottom_toBottomOf="@id/searchLocationInput"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/icon_check_green"
            android:clickable="true"
            android:onClick="@{() -> viewModel.onSearchLocationClick()}"/>

        <TextView
            android:id="@+id/saintPetersburgButton"
            style="@style/Text.ProposedLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchLocationInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/moscowButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:text="@string/saint_petersburg" />

        <TextView
            android:id="@+id/moscowButton"
            style="@style/Text.ProposedLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/saintPetersburgButton"
            app:layout_constraintBottom_toBottomOf="@id/saintPetersburgButton"
            app:layout_constraintStart_toEndOf="@id/saintPetersburgButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:text="@string/moscow" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/locationListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/saintPetersburgButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:scrollbars="vertical"
            tools:listitem="@layout/location_list_item" />

        <ProgressBar
            android:id="@+id/progressView"
            style="@style/ProgressBar"
            app:layout_constraintTop_toTopOf="@id/locationListView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="56dp"
            android:indeterminateTint="@color/app_green"
            app:booleanVisibility="@{viewModel.isProgressVisible()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>